# heterogeneous-computation-homeworks

./: .clang-format  .gitignore  CMakeLists.txt  README.md  slurm-11334338.out  slurm-11334368.out
analysis/: APMA2822B Homework 1.ipynb  report.ipynb
data/: oscar_data.csv
homework_1/: README.md
homework_1/include/: allocators.hpp  multipliers.hpp
homework_1/scripts/: run_benchmark.sh
homework_1/src/: benchmark.cpp
homework_2/: CMakeLists.txt
homework_2/analysis/: APMA2822B Homework 2.ipynb
homework_2/data/: blocking_benchmark.csv  blocking_benchmark_jk_cached.csv  blocking_benchmark_jk_cached_single.csv  data.csv  data_2.csv
homework_2/include/: matrix.hpp  matrix_multiplier.hpp
homework_2/include/multipliers/: blas_multipliers.hpp  block_multiplier_ikj.hpp  block_multiplier_kji.hpp  blocking_multipliers.hpp  default_multiplier.hpp  default_multipliers.hpp  openmp_multipliers.hpp
homework_2/src/: benchmark.cpp
homework_2/tests/: test_multiplication.cpp
homework_3/: CMakeLists.txt  Makefile  compile.sh  text  transpose_test.cu
homework_3/analysis/: Homework3.ipynb
homework_3/data/: benchmark.csv  benchmark_wide.csv
homework_3/include/: atomic_single_warp_multiplier.cuh  atomic_single_warp_multiplier.h  kernels.cu  math_utils.hpp  matrix.hpp  matrix_vector_multiplier.hpp  multiple_warp_multiplier.cuh  multiple_warp_multiplier.h  shuffle_single_warp_multiplier.cuh  shuffle_single_warp_multiplier.h  wide_matrix_multiplier.cuh  wide_matrix_multiplier.h
homework_3/src/: atomic_single_warp_multipler.cupp  benchmark.cpp  benchmark.cu  multiple_warp_multiplier.cupp  shuffle_single_warp_multiplier.cupp  wide_matrix_multiplier.cupp
homework_4/: Makefile  gpu  run_benchmark.sh
homework_4/analysis/: HW4 analysis.ipynb  analysis.ipynb
homework_4/data/: data.csv
homework_4/src/: benchmark.cu
include/: allocators.hpp  math_utils.hpp  multipliers.hpp
src/: benchmark.cpp
stats/: .txt  23-09-22-1695416483.csv
tests/: test_multiplication.cpp
